feat: 前台依赖升级
