# server/docs/swagger.yaml
@@ -289,12 +289,6 @@ definitions:
     required:
     - code
     type: object
-  cli.CreateModuleBody:
-    properties:
-      name:
-        description: 模块名称
-        type: string
-    type: object
   consts.AdminUserStatus:
     enum:
     - 1
@@ -473,6 +467,21 @@ definitions:
       msg:
         type: string
     type: object
+  service.FindNewsListOption:
+    properties:
+      current:
+        minimum: 1
+        type: integer
+      keyword:
+        type: string
+      order_key:
+        type: string
+      order_type:
+        type: string
+      page_size:
+        minimum: 0
+        type: integer
+    type: object
 info:
   contact: {}
   title: 男生自用 API 接口文档
@@ -604,57 +613,6 @@ paths:
       tags:
       - 管理后台-C端用户管理
   /api/admin/news:
-    get:
-      consumes:
-      - application/json
-      parameters:
-      - default: 1
-        description: 当前页
-        in: query
-        name: current
-        type: number
-      - default: 20
-        description: 每页条数
-        in: query
-        name: page_size
-        type: number
-      - description: 需要排序的列
-        in: query
-        name: order_key
-        type: string
-      - description: 排序方式
-        enum:
-        - ase
-        - desc
-        in: query
-        name: order_type
-        type: string
-      - description: 按名称或ID搜索
-        in: query
-        name: keyword
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: resp
-          schema:
-            allOf:
-            - $ref: '#/definitions/resp.Result'
-            - properties:
-                data:
-                  allOf:
-                  - $ref: '#/definitions/resp.RList'
-                  - properties:
-                      list:
-                        items:
-                          $ref: '#/definitions/model.News'
-                        type: array
-                    type: object
-              type: object
-      summary: 新闻列表
-      tags:
-      - 管理后台-新闻
     post:
       consumes:
       - application/json
@@ -737,6 +695,39 @@ paths:
                   $ref: '#/definitions/model.News'
               type: object
       summary: 新闻详情
+      tags:
+      - 管理后台-新闻
+  /api/admin/news/list:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Body
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/service.FindNewsListOption'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: resp
+          schema:
+            allOf:
+            - $ref: '#/definitions/resp.Result'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/resp.RList'
+                  - properties:
+                      list:
+                        items:
+                          $ref: '#/definitions/model.News'
+                        type: array
+                    type: object
+              type: object
+      summary: 新闻列表
       tags:
       - 管理后台-新闻
   /api/admin/role:
@@ -1300,42 +1291,6 @@ paths:
       summary: 获取验证码图片
       tags:
       - 验证码
-  /api/cli/module/create:
-    post:
-      consumes:
-      - application/json
-      description: get string by ID
-      parameters:
-      - description: 模块名称
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/cli.CreateModuleBody'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: resp
-          schema:
-            allOf:
-            - $ref: '#/definitions/resp.Result'
-            - properties:
-                data:
-                  type: boolean
-              type: object
-        "500":
-          description: resp
-          schema:
-            allOf:
-            - $ref: '#/definitions/resp.Result'
-            - properties:
-                data:
-                  type: string
-              type: object
-      summary: 创建模块
-      tags:
-      - cli
   /api/user/current:
     get:
       consumes:
